<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginBottom="16dp"
        android:text="@string/vacations"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonAddVacation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_vacation" />

    <ListView
        android:id="@+id/vacationListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />


</LinearLayout>